# rust_packer

./: .coverage  Cargo.toml  pyproject.toml
.github/workflows/: python-package.yml
src/: lib.rs  speed_test_python.py  speed_test_rust.py  test.py
