[package]
name = "rust_packer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Python bindings
pyo3 = { version = "0.21.2", features = ["extension-module"] }
# NumPy support for pyo3
numpy = "0.21.0"
# Serialization framework
serde = { version = "1.0", features = ["derive"] }
# MessagePack serializer implementation for Serde
rmp-serde = "1.1"

[lib]
name = "rust_packer"
crate-type = ["cdylib"] # Compile to a C-style dynamic library